# NAKit

./: CMakeLists.txt  NAKit.sln
NAKit.Core/: CMakeLists.txt
NAKit.Core/include/: NAKit.h
NAKit.Core/src/: Square.cpp
NAKit.Tests/: CMakeLists.txt
NAKit.Tests/src/: TestMath.cpp
